deploy/k8s/overlays/secure-java-services-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  template:
    spec:
      containers:
        - name: account-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-service
spec:
  template:
    spec:
      containers:
        - name: risk-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence
spec:
  template:
    spec:
      containers:
        - name: persistence
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-data-projection
spec:
  template:
    spec:
      containers:
        - name: market-data-projection
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketdata-publisher
spec:
  template:
    spec:
      containers:
        - name: marketdata-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
spec:
  template:
    spec:
      containers:
        - name: query-service
